[gd_scene load_steps=8 format=4 uid="uid://5n88iilwtb0g"]

[ext_resource type="Script" path="res://Facilities/Checkouts/Checkout.gd" id="1_8da5x"]
[ext_resource type="Script" path="res://Facilities/Checkouts/CheckoutQueueSpot.gd" id="2_shi2c"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lb7dc"]

[sub_resource type="ArrayMesh" id="ArrayMesh_ao2yy"]
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 0.985697, 2),
"format": 34359742465,
"index_count": 468,
"index_data": PackedByteArray("FwAFAAsAFwARAAUAEwADAAkAEwASAAMALAABACoALAAQAAEADwACAAgADwAMAAIALgABAAcALgAqAAEAJQALACgAJQAXAAsAGgAIABgAGgAPAAgAHAAJABkAHAATAAkAEAAHAAEAEAAUAAcALwAHABQALwAuAAcAGQAzADIAGQAJADMAAwAzAAkAMQAOADQAAwAxADMADgADAA0AMQADAA4AHwAMAA8AHwAgAAwAEgANAAMAEgAWAA0AAgAWABIAAgAMABYAKwAUAAYAKwAvABQAAAAUABAAAAAGABQAGAATABwAGAAIABMAJwAXACUAJwAKABcALQAQACwALQAAABAACAASABMACAACABIACgARABcACgAEABEADwAdABUADwAaAB0AJAAcACkAJAAYABwAGQAoACYAKAA1ABsAMAAZADIAKAAwADUAKAAZADAAKQAZACYAKQAcABkAJwAYACQAJwAaABgAFQAbAA4AFQAdABsADAAjABYADAAgACMADwAiAB8ADwAVACIAKwAgAB8AKwAtACAAFQAhACIAFQAOACEAHgA+AA0AHgA/AD4AFgAeAA0AFgAjAB4ACgAkAAQACgAnACQAEQAmAAUAEQApACYABQAoAAsABQAmACgABAApABEABAAkACkAGgAlAB0AGgAnACUAHQAoABsAHQAlACgABgAtACsABgAAAC0AIAAsACMAIAAtACwAHwAvACsAHwAiAC8AIgAuAC8AIgAhAC4AIQAqAC4AIQAeACoAIwAqAB4AIwAsACoAMwA6ADIAMwA7ADoAMAA2ADUAMAA3ADYANAAbADUANAAOABsAOQA2ADcAOQA4ADYAOwA3ADoAOwA5ADcAMgA3ADAAMgA6ADcANAA5ADEANAA4ADkANQA4ADQANQA2ADgAMQA7ADMAMQA5ADsAPwBCAD4APwBDAEIADQA9AA4ADQA+AD0AIQA/AB4AIQA8AD8ADgA8ACEADgA9ADwAQABHAEMAQABEAEcAPQBAADwAPQBBAEAAPABDAD8APABAAEMAPgBBAD0APgBCAEEARwBKAEYARwBLAEoAQgBFAEEAQgBGAEUAQwBGAEIAQwBHAEYAQQBEAEAAQQBFAEQASwBOAEoASwBPAE4ARQBIAEQARQBJAEgARABLAEcARABIAEsARgBJAEUARgBKAEkATQBPAEwATQBOAE8ASQBMAEgASQBNAEwASABPAEsASABMAE8ASgBNAEkASgBOAE0A"),
"lods": [0.215963, PackedByteArray("FwAFAAsAFwARAAUACgARABcACgAEABEADwACAAgADwAMAAIAGgAPAAgAHwAMAA8AGgAIACQACgAaACQACgAkAAQAHwAgAAwABgAgAB8ABgAAACAAIQABAAcAIQAqAAEAIQAeACoAIQA/AB4AIQA8AD8ADgA8ACEADgA9ADwADQA+AD0ADQA9AA4ADgADAA0AMQADAA4AMQAOADQAAwAxADMAAwAzAAkANAAOACgAGQAJADMAGQAzADIAMAAZADIAKAAZADAANAAoADUAKAAwADUABQAZACgABQAoAAsAFwALACgAFQAXACgAFQAoAA4AEAAHAAEAEAAUAAcAAAAUABAAAAAGABQAIQAHABQAHwAhABQAHwAUAAYADwAhAB8ADwAVACEAFQAOACEAEgANAAMAAgANABIAAgAMAA0ADQAMAB4ADAAqAB4ADAABACoAIAABAAwAIAAQAAEAIAAAABAACAADAAkACAASAAMACAACABIAJAAIAAkAJAAJABkAEQAkABkABAAkABEAEQAZAAUAGgAKABcAGgAXABUADwAaABUAHgA+AA0AHgA/AD4AMwA6ADIAMwA7ADoAMAA2ADUAMAA3ADYAMgA3ADAAMgA6ADcAOQA2ADcAOQA4ADYAOwA5ADcAOwA3ADoANAA5ADEANAA4ADkAMQA5ADsAMQA7ADMANQA4ADQANQA2ADgAPwBCAD4APwBDAEIAQwBOAEIAQwBPAE4AQABEAEMAPABAAEMAPABDAD8ARABIAEMASABPAEMASABMAE8APQBAADwAPQBBAEAAPgBBAD0APgBCAEEAQgBFAEEAQgBJAEUAQgBNAEkAQgBOAE0AQQBEAEAAQQBFAEQARQBIAEQARQBJAEgATQBPAEwATQBOAE8ASQBMAEgASQBNAEwA")],
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 80,
"vertex_data": PackedByteArray("AACAvwAAgL8AAIA/AACAv5qZmb4AAIA/AACAPwAAgL8AAIA/AACAP5qZmb4AAIA/AACAPwAAgL8AAIC/AACAP5qZmb4AAIC/AACAvwAAgL/NzMw+AACAv5qZmb7NzMw+AACAPwAAgL/NzMw+AACAP5qZmb7NzMw+AAAAAAAAgL8AAIC/AAAAAJqZmb4AAIC/AAAAAAAAgL8AAIA/AAAAAJqZmb4AAIA/AAAAAJqZmb7NzMw+JUkSPwAAgL+8uzs/AACAvx6FC78AAIA/AACAPx6FC78AAIC/AACAPx6FC78AAIA/AACAPx6FC7/NzMw+AACAvx6FC7/NzMw+AAAAAB6FC7/NzMw+AAAAAB6FC78AAIA/AAAAAB6FC78AAIC/AACAPwAAgL9mZia/AACAP5qZmb5mZia/JUkSPwAAgL9mZia/AAAAAJqZmb5mZia/AACAPx6FC79mZia/AAAAAB6FC79mZia/ZmYmv5qZmb4AAIA/ZmYmvwAAgL+8uzs/ZmYmvwAAgL8AAIA/ZmYmv5qZmb7NzMw+ZmYmvx6FC7/NzMw+ZmYmvx6FC78AAIA/AACAPwAAgL+amWm/AAAAAB6FC7+amWm/AACAP5qZmb6amWm/AAAAAAAAgL+amWm/AAAAAJqZmb6amWm/AACAPx6FC7+amWm/mplpv5qZmb4AAIA/mplpvwAAgL/NzMw+mplpvx6FC78AAIA/mplpvwAAgL8AAIA/mplpv5qZmb7NzMw+mplpvx6FC7/NzMw+AAAAP5qZmb5mZia/AAAAP5qZmb7NzMw+AABAP5qZmb5mZia/AABAP5qZmb7NzMw+AACAPpqZmb7NzMw+AACAPpqZmb5mZia/AACAPvZhk75mZia/AAAAP/Zhk75mZia/AACAPvZhk77NzMw+AAAAP/Zhk77NzMw+AABAP/Zhk75mZia/AABAP/Zhk77NzMw+j8IVv5qZmb4ghes+uB6FvZqZmb4ghes+uB6FvZqZmb7Yo3A/j8IVv5qZmb7Yo3A/j8IVvwD5hb4ghes+uB6FvQD5hb4ghes+uB6FvQD5hb7Yo3A/j8IVvwD5hb7Yo3A/j8IVv5qLJb4epi4/uB6FvZqLJb4epi4/uB6FvZqLJb7Yo3A/j8IVv5qLJb7Yo3A/j8IVv37SBb6dH2U/uB6FvX7SBb6dH2U/uB6FvX7SBb7Yo3A/j8IVv37SBb7Yo3A/j8IVv8BWarydH2U/uB6FvcBWarydH2U/uB6FvcBWarzYo3A/j8IVv8BWarzYo3A/")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_iaoik"]
resource_name = "BasicCheckout_Cube_004"
_surfaces = [{
"aabb": AABB(-1, -1, -1, 2, 0.985697, 2),
"attribute_data": PackedByteArray("AADAPgAAgD8AAAA+AACAPgAAwD4AAAAAAAAgPwAAgD8AACA/AAAAAAAAYD8AAIA+AADAPgAAgD4AAMA+AACAPgAAwD4AAIA+AAAgPwAAgD4AACA/AACAPgAAID8AAIA+AADAPgAAAD8AAMA+AAAAPwAAwD4AAAA/AAAgPwAAAD8AACA/AAAAPwAAID8AAAA/AADAPs3MbD8AAAA+aGamPgAAwD7NzGw/AAAgP83MbD8AAGA/ZmamPgAAYD9mZqY+AADAPmZmpj4AAMA+ZmamPgAAwD5mZqY+AAAgP2hmpj4AACA/aGamPgAAgD4AAAA/AACAPgAAAD8AAMA+AAAgPwAAID8AACA/AAAgPwAAID8AAEA/AAAAPwAAgD4AAIA+AACAPgAAgD4AAMA+AAAAPgAAID8AAAA+AAAgPwAAAD4AAEA/AACAPgAAQD8AAIA+AABAP2hmpj4AAEA/aGamPgAAQD9oZqY+AABAP2hmpj4AAIA+aGamPgAAgD5oZqY+AACAPmhmpj4AAIA+aGamPgAAgD5oZqY+mpkJPwAAgD+amQk/AAAAAJqZCT8AAAA/mpkJPwAAAD+amQk/AACAPpqZCT8AAIA+mpkJP2hmpj6amQk/zcxsPzQzMz/C9Qg/NDMTP2hmpj40MxM/aGamPjQzEz9oZqY+NDMTP2hmpj6amQk/AAAAPs7M/D7NzBQ/mpkJPwAAID8AAMA+mpnpPgAAwD6amek+AADAPpqZ6T4AACA/mpnpPgAAID+amek+AACAPpqZ6T4AAIA+mpnpPgAAgD6amek+AACAPpqZ6T4AACg/zcwMPwAAQD+amek+mpkJP5qZ6T6amQM/Z2YEP5qZAz9nZgQ/mpkDP2dmBD/MzFQ/AACAPgAAID8wMzM9AAAgPzAzMz3MzFQ/AACAPs3MLD5oZqY+mpmpPj4KNz/NzCw+aGamPpqZqT4+Cjc/zcwsPgAAgD4AAMA+MDMzPc3MLD4AAIA+zMxUP2hmpj7MzFQ/aGamPszMVD9oZqY+AAAoP7pJ7D4AACg/uknsPgAAKD+6Sew+mpkJPzAzMz0AAMA+Zmb6PgAAwD5mZvo+Z2b/PjSzED9nZv8+NLMQPwAAID9mZvo+AAAgP2Zm+j4AAIA+Zmb6PgAAgD5mZvo+AACAPmZm+j4AACI/NDMbPwAAQD9mZvo+mpkJP2hm+j4AACA/QDMzPDMzXT8AAIA+MjMLPmhmpj5mZro+KVxfPzIzCz5oZqY+Zma6PilcXz+amQk/QDMzPDIzCz4AAIA+AADAPkAzMzwyMws+AACAPjMzXT9oZqY+MzNdP2hmpj5nZjA/iEEEP2dmMD+IQQQ/AAAwP5qZ6T4AADA/mpnpPgAAMD9oZqY+AAAwP2hmpj4AACg/mpnpPgAAKD+amek+AAAoP5qZ6T4AACg/aGamPgAAKD9oZqY+AAAoP2hmpj4AADg/aGamPgAAOD9oZqY+AAA4P2hmpj4AADg/mpnpPgAAOD+amek+AAA4P5qZ6T4AADg/mpnpPgAAOD+amek+AAA4P5qZ6T4AADA/mpnpPgAAMD+amek+AAA4P2hmpj4AADg/aGamPgAAOD9oZqY+AAAwP2hmpj4AADA/aGamPgAAKD+amek+AAAoP5qZ6T4AACg/mpnpPgAAKD9oZqY+AAAoP2hmpj4AACg/aGamPszMVD9oZqY+zMxUP2hmpj7MzFQ/aGamPszMVD9oZqY+AABAP2hmpj4AAEA/aGamPgAAQD9oZqY+AABAP2hmpj4AACA/AAAAPgAAID8AAAA+AABAPwAAgD4AAEA/AACAPszMVD8AAIA+zMxUPwAAgD4AACA/MDMzPQAAID8wMzM9zMxUP2hmpj7MzFQ/aGamPszMVD9oZqY+AABAP2hmpj4AAEA/aGamPgAAQD9oZqY+AAAgPwAAAD4AACA/AAAAPgAAQD8AAIA+zMxUPwAAgD4AACA/MDMzPQAAID8wMzM9zMxUP2hmpj7MzFQ/aGamPszMVD9oZqY+AABAP2hmpj4AAEA/aGamPgAAQD9oZqY+AAAgPwAAAD4AAEA/AACAPszMVD8AAIA+AAAgPzAzMz3MzFQ/aGamPszMVD9oZqY+zMxUP2hmpj7MzFQ/aGamPgAAQD9oZqY+AABAP2hmpj4AAEA/aGamPgAAQD9oZqY+AAAgPwAAAD4AAEA/AACAPgAAQD8AAIA+zMxUPwAAgD7MzFQ/AACAPgAAID8wMzM9zMxUP2hmpj7MzFQ/aGamPszMVD9oZqY+AABAP2hmpj4AAEA/aGamPgAAQD9oZqY+AAAgPwAAAD4AAEA/AACAPgAAQD8AAIA+zMxUPwAAgD4AACA/MDMzPczMVD8AAIA+AADAPs3MbD8AAIA+AAAAPwAAgD5oZqY+NDMzP8L1CD80MxM/aGamPjQzEz9oZqY+zsz8Ps3MFD8AAIA+mpnpPpqZqT4+Cjc/zMxUP2hmpj4="),
"format": 34359742487,
"index_count": 468,
"index_data": PackedByteArray("QgAPACEAQgA1AA8AOQALABwAOQA4AAsAdgAEAHAAdgA0AAQALwAGABgALwAjAAYAewAFABcAewBxAAUAZgAgAG0AZgBBACAASwAZAEQASwAyABkATgAcAEcATgA5ABwAMwAVAAMAMwA6ABUAfAAWADsAfAB6ABYARgCGAIMARgAbAIYACgCGABsAgQAsAIoACgCBAIYALAAKACgAgQAKACwAVgAkADAAVgBaACQANwAmAAkANwBAACYABwBAADcABwAlAEAAcwA7ABQAcwB8ADsAAAA6ADMAAAASADoARQA5AE4ARQAaADkAagBBAGYAagAdAEEAeAA0AHYAeAACADQAGgA4ADkAGgAIADgAHwA1AEIAHwANADUALgBQAD0ALgBIAFAAZQBOAG8AZQBFAE4ARgBuAGgAbgCNAE0AfwBGAIMAbgB/AI0AbgBGAH8AbwBHAGkAbwBOAEcAbABDAGQAbABKAEMAPABMACoAPABPAEwAJQBjAEAAJQBbAGMAMQBgAFcAMQA+AGAAdABcAFgAdAB5AFwAPwBeAGEAPwArAF4AVACnACcAVACtAKcAQABTACYAQABjAFMAHgBkAAwAHgBsAGQANgBpABEANgBvAGkAEABuACIAEABoAG4ADgBvADYADgBlAG8ASQBnAFEASQBrAGcATwBtAEwATwBmAG0AEwB3AHIAEwABAHcAWwB2AGMAWwB4AHYAWQB9AHUAWQBiAH0AYQB6AHwAYQBeAHoAXwBxAHsAXwBVAHEAYwBwAFMAYwB2AHAAhwCaAIQAhwCdAJoAfgCPAIwAfgCRAI8AigBNAI0AigAsAE0AlwCQAJIAlwCVAJAAnACSAJkAnACXAJIAggCRAH4AggCYAJEAiQCWAIAAiQCUAJYAiwCTAIgAiwCOAJMAgACbAIUAgACWAJsArAC0AKYArAC4ALQAKQCkAC0AKQCoAKQAXQCrAFIAXQCfAKsALAChAF8ALACjAKEArgDCALcArgC6AMIAogCvAKAAogCxAK8AngC3AKoAngCuALcAqQCzAKUAqQC2ALMAwwDMAMAAwwDRAMwAtgC/ALMAtgDBAL8AuQDAALUAuQDDAMAAsgC7ALAAsgC9ALsA0QDYAMwA0QDcANgAvgDHALwAvgDJAMcAugDPAMIAugDEAM8AwQDLAL8AwQDOAMsA1gDdANQA1gDZAN0AyADTAMYAyADVANMAxQDbANAAxQDSANsAzQDXAMoAzQDaANcA"),
"lods": [0.215963, PackedByteArray("QgAPACEAQgA1AA8AHwA1AEIAHwANADUALwAGABgALwAjAAYASgAvABgAVgAjAC8ASgAYAGQAHgBKAGQAHgBkAAwAVgBaACMAEwBaAFYAEwABAFoAXQAFABcAXQBxAAUAXQBSAHEAXQCrAFIAXQCfAKsALACfAF0ALACjAJ8AKACoAKMAKACjACwALAAKACgAgQAKACwAgQAsAIoACgCBAIYACgCGABsAigAsAG4ARgAbAIYARgCGAIMAfwBGAIMAbgBGAH8AigBuAI0AbgB/AI0AEABGAG4AEABuACIAQQAgAG0APABBAG0APABtACoAMwAVAAMAMwA6ABUAAAA6ADMAAAASADoA5wAWAOEA5gDnAOEA5gDhAN4A4ADnAOYA4ADjAOcA4wArAOcANwAmAAkABwAmADcABwAlACYAJgAlAFMAJQBwAFMAJQAEAHAAWwAEACUAWwA0AAQAWwACADQAGgALABwAGgA4AAsAGgAIADgAZQAaABwAZQAcAEcANgBlAEcADgBlADYANgBHABEA5QDfAOQA5QDkAOIALgDlAOIAVACnACcAVACtAKcAhwCaAIQAhwCdAJoAfgCPAIwAfgCRAI8AggCRAH4AggCYAJEAlwCQAJIAlwCVAJAAnACXAJIAnACSAJkAiQCWAIAAiQCUAJYAgACWAJsAgACbAIUAiwCTAIgAiwCOAJMArAC0AKYArAC4ALQAuADYALQAuADcANgArgC6ALcAngCuALcAngC3AKoAugDEALcAxADbALcAxADSANsAogCvAKAAogCxAK8AqQCzAKUAqQC2ALMAtgC/ALMAtgDKAL8AtgDXAMoAtgDaANcAsgC7ALAAsgC9ALsAvQDHALsAvQDJAMcA1gDdANQA1gDZAN0AyADTAMYAyADVANMA")],
"material": SubResource("StandardMaterial3D_lb7dc"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 232,
"vertex_data": PackedByteArray("AACAvwAAgL8AAIA/AACAvwAAgL8AAIA/AACAvwAAgL8AAIA/AACAv5qZmb4AAIA/AACAv5qZmb4AAIA/AACAv5qZmb4AAIA/AACAPwAAgL8AAIA/AACAPwAAgL8AAIA/AACAPwAAgL8AAIA/AACAP5qZmb4AAIA/AACAP5qZmb4AAIA/AACAP5qZmb4AAIA/AACAPwAAgL8AAIC/AACAPwAAgL8AAIC/AACAPwAAgL8AAIC/AACAP5qZmb4AAIC/AACAP5qZmb4AAIC/AACAP5qZmb4AAIC/AACAvwAAgL/NzMw+AACAvwAAgL/NzMw+AACAvwAAgL/NzMw+AACAv5qZmb7NzMw+AACAv5qZmb7NzMw+AACAv5qZmb7NzMw+AACAPwAAgL/NzMw+AACAPwAAgL/NzMw+AACAPwAAgL/NzMw+AACAP5qZmb7NzMw+AACAP5qZmb7NzMw+AAAAAAAAgL8AAIC/AAAAAAAAgL8AAIC/AAAAAAAAgL8AAIC/AAAAAJqZmb4AAIC/AAAAAJqZmb4AAIC/AAAAAJqZmb4AAIC/AAAAAAAAgL8AAIA/AAAAAAAAgL8AAIA/AAAAAAAAgL8AAIA/AAAAAJqZmb4AAIA/AAAAAJqZmb4AAIA/AAAAAJqZmb4AAIA/AAAAAJqZmb4AAIA/AAAAAJqZmb7NzMw+AAAAAJqZmb7NzMw+AAAAAJqZmb7NzMw+AAAAAJqZmb7NzMw+JUkSPwAAgL+8uzs/JUkSPwAAgL+8uzs/JUkSPwAAgL+8uzs/JUkSPwAAgL+8uzs/JUkSPwAAgL+8uzs/AACAvx6FC78AAIA/AACAvx6FC78AAIA/AACAPx6FC78AAIC/AACAPx6FC78AAIC/AACAPx6FC78AAIA/AACAPx6FC78AAIA/AACAPx6FC7/NzMw+AACAvx6FC7/NzMw+AACAvx6FC7/NzMw+AAAAAB6FC7/NzMw+AAAAAB6FC7/NzMw+AAAAAB6FC7/NzMw+AAAAAB6FC7/NzMw+AAAAAB6FC78AAIA/AAAAAB6FC78AAIC/AAAAAB6FC78AAIC/AACAPwAAgL9mZia/AACAPwAAgL9mZia/AACAPwAAgL9mZia/AACAP5qZmb5mZia/AACAP5qZmb5mZia/JUkSPwAAgL9mZia/JUkSPwAAgL9mZia/JUkSPwAAgL9mZia/JUkSPwAAgL9mZia/AAAAAJqZmb5mZia/AAAAAJqZmb5mZia/AACAPx6FC79mZia/AAAAAB6FC79mZia/AAAAAB6FC79mZia/AAAAAB6FC79mZia/ZmYmv5qZmb4AAIA/ZmYmv5qZmb4AAIA/ZmYmv5qZmb4AAIA/ZmYmv5qZmb4AAIA/ZmYmvwAAgL+8uzs/ZmYmvwAAgL+8uzs/ZmYmvwAAgL+8uzs/ZmYmvwAAgL+8uzs/ZmYmvwAAgL8AAIA/ZmYmvwAAgL8AAIA/ZmYmvwAAgL8AAIA/ZmYmv5qZmb7NzMw+ZmYmv5qZmb7NzMw+ZmYmv5qZmb7NzMw+ZmYmvx6FC7/NzMw+ZmYmvx6FC7/NzMw+ZmYmvx6FC7/NzMw+ZmYmvx6FC78AAIA/AACAPwAAgL+amWm/AACAPwAAgL+amWm/AAAAAB6FC7+amWm/AAAAAB6FC7+amWm/AACAP5qZmb6amWm/AACAP5qZmb6amWm/AAAAAAAAgL+amWm/AAAAAAAAgL+amWm/AAAAAAAAgL+amWm/AAAAAJqZmb6amWm/AAAAAJqZmb6amWm/AACAPx6FC7+amWm/mplpv5qZmb4AAIA/mplpv5qZmb4AAIA/mplpvwAAgL/NzMw+mplpvwAAgL/NzMw+mplpvwAAgL/NzMw+mplpvwAAgL/NzMw+mplpvx6FC78AAIA/mplpvwAAgL8AAIA/mplpvwAAgL8AAIA/mplpvwAAgL8AAIA/mplpv5qZmb7NzMw+mplpv5qZmb7NzMw+mplpvx6FC7/NzMw+mplpvx6FC7/NzMw+AAAAP5qZmb5mZia/AAAAP5qZmb5mZia/AAAAP5qZmb7NzMw+AAAAP5qZmb7NzMw+AABAP5qZmb5mZia/AABAP5qZmb5mZia/AABAP5qZmb5mZia/AABAP5qZmb7NzMw+AABAP5qZmb7NzMw+AABAP5qZmb7NzMw+AACAPpqZmb7NzMw+AACAPpqZmb7NzMw+AACAPpqZmb7NzMw+AACAPpqZmb5mZia/AACAPpqZmb5mZia/AACAPpqZmb5mZia/AACAPvZhk75mZia/AACAPvZhk75mZia/AACAPvZhk75mZia/AAAAP/Zhk75mZia/AAAAP/Zhk75mZia/AACAPvZhk77NzMw+AACAPvZhk77NzMw+AACAPvZhk77NzMw+AAAAP/Zhk77NzMw+AAAAP/Zhk77NzMw+AABAP/Zhk75mZia/AABAP/Zhk75mZia/AABAP/Zhk75mZia/AABAP/Zhk77NzMw+AABAP/Zhk77NzMw+AABAP/Zhk77NzMw+j8IVv5qZmb4ghes+j8IVv5qZmb4ghes+j8IVv5qZmb4ghes+j8IVv5qZmb4ghes+uB6FvZqZmb4ghes+uB6FvZqZmb4ghes+uB6FvZqZmb4ghes+uB6FvZqZmb4ghes+uB6FvZqZmb7Yo3A/uB6FvZqZmb7Yo3A/uB6FvZqZmb7Yo3A/uB6FvZqZmb7Yo3A/j8IVv5qZmb7Yo3A/j8IVv5qZmb7Yo3A/j8IVv5qZmb7Yo3A/j8IVv5qZmb7Yo3A/j8IVvwD5hb4ghes+j8IVvwD5hb4ghes+j8IVvwD5hb4ghes+uB6FvQD5hb4ghes+uB6FvQD5hb4ghes+uB6FvQD5hb4ghes+uB6FvQD5hb7Yo3A/uB6FvQD5hb7Yo3A/uB6FvQD5hb7Yo3A/j8IVvwD5hb7Yo3A/j8IVvwD5hb7Yo3A/j8IVvwD5hb7Yo3A/j8IVv5qLJb4epi4/j8IVv5qLJb4epi4/j8IVv5qLJb4epi4/uB6FvZqLJb4epi4/uB6FvZqLJb4epi4/uB6FvZqLJb4epi4/uB6FvZqLJb7Yo3A/uB6FvZqLJb7Yo3A/j8IVv5qLJb7Yo3A/j8IVv5qLJb7Yo3A/j8IVv37SBb6dH2U/j8IVv37SBb6dH2U/j8IVv37SBb6dH2U/j8IVv37SBb6dH2U/uB6FvX7SBb6dH2U/uB6FvX7SBb6dH2U/uB6FvX7SBb6dH2U/uB6FvX7SBb6dH2U/uB6FvX7SBb7Yo3A/uB6FvX7SBb7Yo3A/uB6FvX7SBb7Yo3A/j8IVv37SBb7Yo3A/j8IVv37SBb7Yo3A/j8IVv37SBb7Yo3A/j8IVv8BWarydH2U/j8IVv8BWarydH2U/j8IVv8BWarydH2U/uB6FvcBWarydH2U/uB6FvcBWarydH2U/uB6FvcBWarydH2U/uB6FvcBWarzYo3A/uB6FvcBWarzYo3A/uB6FvcBWarzYo3A/j8IVv8BWarzYo3A/j8IVv8BWarzYo3A/j8IVv8BWarzYo3A/AACAvwAAgL/NzMw+AAAAAAAAgL8AAIC/JUkSPwAAgL+8uzs/AACAvx6FC7/NzMw+AAAAAB6FC7/NzMw+AAAAAB6FC7/NzMw+AAAAAB6FC78AAIC/JUkSPwAAgL9mZia/ZmYmvwAAgL+8uzs/ZmYmv5qZmb7NzMw+AAD/f/9/////fwAA////v/9//3//f///AAD/f/9/////f/9//3////9///8AAP+//38AAP//H9T/f/9//3///////3//f////3//f/9/////f///AAD/v////3//f////38AAP///7///////3///////3//f/7///////9/////f///AAD/v////3//f///AAD/f/9/////fwAA////v/////+0NFnaAAD/f/9/////////XAYtw/9///8AAP+//38AAP///9v/fwAA//9Z2P///3//f/7//3///wAA/7////9//3///wAA/3//f6Ul/38AAP///7///////3///wAA/3//f9gc//////9/////f///AAD/v/9/AAD///+//38AAP///7//f/9//3////9//3//f////3///////7//f///AAD/v/9//v////+/AAD/f/9/AAD/////////v/9///////+//3/+/////79CR704LzuaJP9/AAD//2bM/38AAP///7/fyQAAjCdB4v9/AAD////bAAD/f/9/////f/9//3//////////f///////f/9/////f/9//3///////3//f/7/////f/9//v8AAP9//3/////////pG/TNAAD/f/9/NgVCR7041CrlGt/JAADUKhnl/////wkjhNH/f/9//3///wAA/3//f4If//////9/////fwAA////v/9/AAD///+/////f/9/////f///AAD/v////3//f///Qke9OCpUjC7gUGhio6J9LP9/AAD///+//38AAP//0MgAAP9//39bGP9///8AAP+/////f/9///8AAP9//39FG0JHvTjSSAgq4FBoYrRWehj/f/7/////v/9//3//f////3///////7//f///AAD/v/9/AAD///+/38kAAM4k4t//fwAAY7j/v5HonCj9Hs3l/38AAP///7//f/9//3////9/AAAg6P+//3/+/////7//////dBG5yP9///////+/38kAAIQmXeH/////dhm6zJHonCgFFDfh/3//f/9/////fwAA////v////3//f/7/AAD/f/9/qR7gUGhiRIY6G/9///8AAP+/////f/9///8AAP9//3/HJOBQaGL2t3Y5/38AAP///78AAP9//3/qG/9///8AAP+/////f/9/////f/9//3////9///8AAP+//38AAP///7//////8DH32P9/AAC93v+/keicKOEj2Of/f/9//3////9/AAD///+//3//f/9/////fwAA/v//v/////8uCBbE/3///wAA/7//////9Rh5zJHonCiYGvbj/////////7//f///AAD/v/9//3////8//3///wAA/7//////////v/9///8AAP+/////f////7//f/9/////P/9///8AAP+/////f////78AAP9/////v/9//3////8//3///wAA/78AAP9/////v/////////+//3///wAA/78AAP9/////v/////////+//3///wAA/7//////////v/9///8AAP+/AAD/f////7//f/9/////P/9///8AAP+//3//f////z//f///AAD/v/////////+//3///wAA/7////9/////v/9//3////8//3///wAA/7////9/////vwAA/3////+//3/+/////7//////////v/9///////+//////////7//f///////v/9//v////+/////f////7//f/9/////P/9///////+//3/+/////7////9/////vwAA/3////+//3/+/////7//f/9/////P/9///////+/AAD/f////7//////////v7in//////+//////////7+4p///////v////3////+//3//f////z//f/9/////P////3////+/AAD/f////7//f/9/////P/9//3////8/AAD/f////7+4p///////v0OQ//////+/uKf//////79DkP//////v////3////+//3//f////z////9/////vwAA/3////+//3//f////z8AAP9/////vwAA/3////+//////////79DkP//////v/////////+/Q5D//////7////9/////v////3////+//3//f////z////9/////v////3////+/AAD/f////78AAP9/////v/9//3////8/AAD/f////7//////////v/9///8AAP+//////////7//f///AAD/v////3////+//3//f////z//f///AAD/v////3////+/AAD/f////7//f/9/////P/9///8AAP+/keicKLQ0WdrgUGhi/3+lJZjKAAD//2bM0O5sHekb9M0YSFw8/382BSniAADUKhnl1k6UWf9/gh/ySw1NKlSMLuveHhvOJOLfKeXZBnQRucg=")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_ao2yy")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_m1oyt"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_hmb0b"]
data = PackedVector3Array(0, -0.545, -1, 1, -0.3, -1, 0, -0.3, -1, 0, -0.545, -1, 1, -0.545, -1, 1, -0.3, -1, 1, -0.545, 0.4, 1, -0.3, 1, 1, -0.3, 0.4, 1, -0.545, 0.4, 1, -0.545, 1, 1, -0.3, 1, -0.9125, -0.545, 1, -1, -0.3, 1, -0.9125, -0.3, 1, -0.9125, -0.545, 1, -1, -0.545, 1, -1, -0.3, 1, 0.571429, -1, 0.733333, 1, -1, 1, 1, -1, 0.4, 0.571429, -1, 0.733333, 0, -1, 1, 1, -1, 1, -0.9125, -0.3, 0.4, -1, -0.3, 1, -1, -0.3, 0.4, -0.9125, -0.3, 0.4, -0.9125, -0.3, 1, -1, -0.3, 1, 0, -0.545, -0.9125, 0, -0.3, -1, 0, -0.3, -0.9125, 0, -0.545, -0.9125, 0, -0.545, -1, 0, -0.3, -1, 0.571429, -1, -0.65, 1, -1, 0.4, 1, -1, -0.65, 0.571429, -1, -0.65, 0.571429, -1, 0.733333, 1, -1, 0.4, 1, -0.545, -0.65, 1, -0.3, 0.4, 1, -0.3, -0.65, 1, -0.545, -0.65, 1, -0.545, 0.4, 1, -0.3, 0.4, -1, -0.545, 1, -1, -0.3, 0.4, -1, -0.3, 1, -1, -0.545, 1, -1, -0.545, 0.4, -1, -0.3, 0.4, -0.9125, -0.545, 0.4, -1, -0.3, 0.4, -1, -0.545, 0.4, -0.9125, -0.545, 0.4, -0.9125, -0.3, 0.4, -1, -0.3, 0.4, 1, -0.3, -0.65, 0.75, -0.3, 0.4, 0.75, -0.3, -0.65, 1, -0.3, -0.65, 1, -0.3, 0.4, 0.75, -0.3, 0.4, 1, -0.3, 1, 0.75, -0.3, 0.4, 1, -0.3, 0.4, 0.5, -0.3, 0.4, 0, -0.3, 0.4, 0.25, -0.3, 0.4, 1, -0.3, 1, 0.5, -0.3, 0.4, 0.75, -0.3, 0.4, 0, -0.3, 0.4, 1, -0.3, 1, 0, -0.3, 1, 0.5, -0.3, 0.4, 1, -0.3, 1, 0, -0.3, 0.4, -0.65, -1, 0.733333, 0, -1, 1, 0.571429, -1, 0.733333, -0.65, -1, 0.733333, -0.65, -1, 1, 0, -1, 1, 1, -0.545, 1, 0, -0.3, 1, 1, -0.3, 1, 1, -0.545, 1, 0, -0.545, 1, 0, -0.3, 1, 1, -1, 1, 0, -0.545, 1, 1, -0.545, 1, 1, -1, 1, 0, -1, 1, 0, -0.545, 1, -0.9125, -1, 0.4, -1, -0.545, 0.4, -1, -1, 0.4, -0.9125, -1, 0.4, -0.9125, -0.545, 0.4, -1, -0.545, 0.4, -1, -1, 1, -1, -0.545, 0.4, -1, -0.545, 1, -1, -1, 1, -1, -1, 0.4, -1, -0.545, 0.4, 1, -1, -0.65, 1, -0.545, 0.4, 1, -0.545, -0.65, 1, -1, -0.65, 1, -1, 0.4, 1, -0.545, 0.4, 0, -1, -0.9125, 0, -0.545, -1, 0, -0.545, -0.9125, 0, -1, -0.9125, 0, -1, -1, 0, -0.545, -1, -0.9125, -1, 1, -1, -0.545, 1, -0.9125, -0.545, 1, -0.9125, -1, 1, -1, -1, 1, -1, -0.545, 1, 1, -1, 0.4, 1, -0.545, 1, 1, -0.545, 0.4, 1, -1, 0.4, 1, -1, 1, 1, -0.545, 1, 0, -1, -1, 1, -0.545, -1, 0, -0.545, -1, 0, -1, -1, 1, -1, -1, 1, -0.545, -1, 0.571429, -1, 0.733333, 0, -0.545, -0.65, 0, -0.545, 0.4, 0.571429, -1, 0.733333, 0.571429, -1, -0.65, 0, -0.545, -0.65, 1, -1, -0.9125, 1, -0.545, -0.65, 1, -0.545, -0.9125, 1, -1, -0.9125, 1, -1, -0.65, 1, -0.545, -0.65, 1, -0.3, -0.65, 0, -0.3, -0.9125, 1, -0.3, -0.9125, 0, -0.3, -0.9125, 0.25, -0.3, -0.65, 0, -0.3, -0.65, 0.5, -0.3, -0.65, 1, -0.3, -0.65, 0.75, -0.3, -0.65, 0, -0.3, -0.9125, 0.5, -0.3, -0.65, 0.25, -0.3, -0.65, 0, -0.3, -0.9125, 1, -0.3, -0.65, 0.5, -0.3, -0.65, 1, -0.545, -0.9125, 1, -0.3, -0.65, 1, -0.3, -0.9125, 1, -0.545, -0.9125, 1, -0.545, -0.65, 1, -0.3, -0.65, 0, -1, -0.9125, 1, -1, -0.65, 1, -1, -0.9125, 0, -1, -0.9125, 0.571429, -1, -0.65, 1, -1, -0.65, 0, -0.545, 0.4, 0, -0.3, -0.65, 0, -0.3, 0.4, 0, -0.545, 0.4, 0, -0.545, -0.65, 0, -0.3, -0.65, 0, -1, 1, -0.65, -0.545, 1, 0, -0.545, 1, 0, -1, 1, -0.65, -1, 1, -0.65, -0.545, 1, 0.571429, -1, 0.733333, -0.65, -0.545, 0.4, -0.65, -1, 0.733333, 0.571429, -1, 0.733333, 0, -0.545, 0.4, -0.65, -0.545, 0.4, -0.9125, -1, 0.4, -0.65, -1, 1, -0.65, -1, 0.733333, -0.9125, -1, 0.4, -0.9125, -1, 1, -0.65, -1, 1, 0, -0.545, 0.4, -0.65, -0.3, 0.4, -0.65, -0.545, 0.4, 0, -0.545, 0.4, 0, -0.3, 0.4, -0.65, -0.3, 0.4, -0.65, -0.3, 1, -0.065, -0.3, 0.94, 0, -0.3, 1, -0.65, -0.3, 1, -0.585, -0.3, 0.94, -0.065, -0.3, 0.94, 0, -0.545, 1, -0.65, -0.3, 1, 0, -0.3, 1, 0, -0.545, 1, -0.65, -0.545, 1, -0.65, -0.3, 1, 0, -1, -1, 1, -1, -0.9125, 1, -1, -1, 0, -1, -1, 0, -1, -0.9125, 1, -1, -0.9125, 1, -0.545, -1, 1, -0.3, -0.9125, 1, -0.3, -1, 1, -0.545, -1, 1, -0.545, -0.9125, 1, -0.3, -0.9125, 1, -0.3, -1, 0, -0.3, -0.9125, 0, -0.3, -1, 1, -0.3, -1, 1, -0.3, -0.9125, 0, -0.3, -0.9125, 1, -1, -1, 1, -0.545, -0.9125, 1, -0.545, -1, 1, -1, -1, 1, -1, -0.9125, 1, -0.545, -0.9125, 0.571429, -1, -0.65, 0, -0.545, -0.9125, 0, -0.545, -0.65, 0.571429, -1, -0.65, 0, -1, -0.9125, 0, -0.545, -0.9125, 0, -0.545, -0.65, 0, -0.3, -0.9125, 0, -0.3, -0.65, 0, -0.545, -0.65, 0, -0.545, -0.9125, 0, -0.3, -0.9125, -1, -1, 0.4, -0.9125, -1, 1, -0.9125, -1, 0.4, -1, -1, 0.4, -1, -1, 1, -0.9125, -1, 1, -0.65, -1, 1, -0.9125, -0.545, 1, -0.65, -0.545, 1, -0.65, -1, 1, -0.9125, -1, 1, -0.9125, -0.545, 1, -0.65, -1, 0.733333, -0.9125, -0.545, 0.4, -0.9125, -1, 0.4, -0.65, -1, 0.733333, -0.65, -0.545, 0.4, -0.9125, -0.545, 0.4, -0.65, -0.545, 0.4, -0.9125, -0.3, 0.4, -0.9125, -0.545, 0.4, -0.65, -0.545, 0.4, -0.65, -0.3, 0.4, -0.9125, -0.3, 0.4, -0.65, -0.3, 0.4, -0.9125, -0.3, 1, -0.9125, -0.3, 0.4, -0.65, -0.3, 0.4, -0.65, -0.3, 1, -0.9125, -0.3, 1, -0.65, -0.545, 1, -0.9125, -0.3, 1, -0.65, -0.3, 1, -0.65, -0.545, 1, -0.9125, -0.545, 1, -0.9125, -0.3, 1, 0.75, -0.3, 0.4, 0.75, -0.287857, -0.65, 0.75, -0.3, -0.65, 0.75, -0.3, 0.4, 0.75, -0.287857, 0.4, 0.75, -0.287857, -0.65, 0.5, -0.3, -0.65, 0.25, -0.287857, -0.65, 0.25, -0.3, -0.65, 0.5, -0.3, -0.65, 0.5, -0.287857, -0.65, 0.25, -0.287857, -0.65, 0.25, -0.3, 0.4, 0, -0.3, -0.65, 0.25, -0.3, -0.65, 0.25, -0.3, 0.4, 0, -0.3, 0.4, 0, -0.3, -0.65, 0.5, -0.287857, 0.4, 0.25, -0.287857, -0.65, 0.5, -0.287857, -0.65, 0.5, -0.287857, 0.4, 0.25, -0.287857, 0.4, 0.25, -0.287857, -0.65, 0.75, -0.287857, 0.4, 0.5, -0.287857, -0.65, 0.75, -0.287857, -0.65, 0.75, -0.287857, 0.4, 0.5, -0.287857, 0.4, 0.5, -0.287857, -0.65, 0.75, -0.3, -0.65, 0.5, -0.287857, -0.65, 0.5, -0.3, -0.65, 0.75, -0.3, -0.65, 0.75, -0.287857, -0.65, 0.5, -0.287857, -0.65, 0.25, -0.3, 0.4, 0.5, -0.287857, 0.4, 0.5, -0.3, 0.4, 0.25, -0.3, 0.4, 0.25, -0.287857, 0.4, 0.5, -0.287857, 0.4, 0.25, -0.3, -0.65, 0.25, -0.287857, 0.4, 0.25, -0.3, 0.4, 0.25, -0.3, -0.65, 0.25, -0.287857, -0.65, 0.25, -0.287857, 0.4, 0.5, -0.3, 0.4, 0.75, -0.287857, 0.4, 0.75, -0.3, 0.4, 0.5, -0.3, 0.4, 0.5, -0.287857, 0.4, 0.75, -0.287857, 0.4, -0.585, -0.3, 0.94, -0.065, -0.261665, 0.94, -0.065, -0.3, 0.94, -0.585, -0.3, 0.94, -0.585, -0.261665, 0.94, -0.065, -0.261665, 0.94, 0, -0.3, 1, -0.065, -0.3, 0.46, 0, -0.3, 0.4, 0, -0.3, 1, -0.065, -0.3, 0.94, -0.065, -0.3, 0.46, -0.65, -0.3, 0.4, -0.585, -0.3, 0.94, -0.65, -0.3, 1, -0.65, -0.3, 0.4, -0.585, -0.3, 0.46, -0.585, -0.3, 0.94, 0, -0.3, 0.4, -0.585, -0.3, 0.46, -0.65, -0.3, 0.4, 0, -0.3, 0.4, -0.065, -0.3, 0.46, -0.585, -0.3, 0.46, -0.585, -0.261665, 0.46, -0.585, -0.161665, 0.94, -0.585, -0.261665, 0.94, -0.585, -0.261665, 0.46, -0.585, -0.161665, 0.682222, -0.585, -0.161665, 0.94, -0.065, -0.3, 0.46, -0.585, -0.261665, 0.46, -0.585, -0.3, 0.46, -0.065, -0.3, 0.46, -0.065, -0.261665, 0.46, -0.585, -0.261665, 0.46, -0.585, -0.3, 0.46, -0.585, -0.261665, 0.94, -0.585, -0.3, 0.94, -0.585, -0.3, 0.46, -0.585, -0.261665, 0.46, -0.585, -0.261665, 0.94, -0.065, -0.3, 0.94, -0.065, -0.261665, 0.46, -0.065, -0.3, 0.46, -0.065, -0.3, 0.94, -0.065, -0.261665, 0.94, -0.065, -0.261665, 0.46, -0.585, -0.161665, 0.94, -0.065, -0.130686, 0.94, -0.065, -0.161665, 0.94, -0.585, -0.161665, 0.94, -0.585, -0.130686, 0.94, -0.065, -0.130686, 0.94, -0.065, -0.261665, 0.94, -0.065, -0.161665, 0.682222, -0.065, -0.261665, 0.46, -0.065, -0.261665, 0.94, -0.065, -0.161665, 0.94, -0.065, -0.161665, 0.682222, -0.585, -0.261665, 0.94, -0.065, -0.161665, 0.94, -0.065, -0.261665, 0.94, -0.585, -0.261665, 0.94, -0.585, -0.161665, 0.94, -0.065, -0.161665, 0.94, -0.065, -0.261665, 0.46, -0.585, -0.161665, 0.682222, -0.585, -0.261665, 0.46, -0.065, -0.261665, 0.46, -0.065, -0.161665, 0.682222, -0.585, -0.161665, 0.682222, -0.585, -0.130686, 0.94, -0.065, -0.0143029, 0.94, -0.065, -0.130686, 0.94, -0.585, -0.130686, 0.94, -0.585, -0.0143029, 0.94, -0.065, -0.0143029, 0.94, -0.065, -0.161665, 0.682222, -0.585, -0.130686, 0.895014, -0.585, -0.161665, 0.682222, -0.065, -0.161665, 0.682222, -0.065, -0.130686, 0.895014, -0.585, -0.130686, 0.895014, -0.585, -0.161665, 0.682222, -0.585, -0.130686, 0.94, -0.585, -0.161665, 0.94, -0.585, -0.161665, 0.682222, -0.585, -0.130686, 0.895014, -0.585, -0.130686, 0.94, -0.065, -0.161665, 0.94, -0.065, -0.130686, 0.895014, -0.065, -0.161665, 0.682222, -0.065, -0.161665, 0.94, -0.065, -0.130686, 0.94, -0.065, -0.130686, 0.895014, -0.065, -0.0143029, 0.895014, -0.585, -0.0143029, 0.94, -0.585, -0.0143029, 0.895014, -0.065, -0.0143029, 0.895014, -0.065, -0.0143029, 0.94, -0.585, -0.0143029, 0.94, -0.065, -0.130686, 0.895014, -0.585, -0.0143029, 0.895014, -0.585, -0.130686, 0.895014, -0.065, -0.130686, 0.895014, -0.065, -0.0143029, 0.895014, -0.585, -0.0143029, 0.895014, -0.585, -0.130686, 0.895014, -0.585, -0.0143029, 0.94, -0.585, -0.130686, 0.94, -0.585, -0.130686, 0.895014, -0.585, -0.0143029, 0.895014, -0.585, -0.0143029, 0.94, -0.065, -0.130686, 0.94, -0.065, -0.0143029, 0.895014, -0.065, -0.130686, 0.895014, -0.065, -0.130686, 0.94, -0.065, -0.0143029, 0.94, -0.065, -0.0143029, 0.895014)

[node name="BasicCheckout" type="Node3D" groups=["Checkout"]]
script = ExtResource("1_8da5x")

[node name="BasicCheckout " type="MeshInstance3D" parent="."]
transform = Transform3D(0.7, 0, 0, 0, 1, 0, 0, 0, 0.9, 0, 1, 0)
mesh = SubResource("ArrayMesh_iaoik")
skeleton = NodePath("")
surface_material_override/0 = SubResource("StandardMaterial3D_m1oyt")

[node name="StaticBody3D" type="StaticBody3D" parent="BasicCheckout "]

[node name="CollisionShape3D" type="CollisionShape3D" parent="BasicCheckout /StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_hmb0b")

[node name="QueueSpot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, -0.5)
script = ExtResource("2_shi2c")

[node name="ConveyorPoints" type="Node3D" parent="."]

[node name="StartPoint" type="Node3D" parent="ConveyorPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.35, 0.712, -0.457179)

[node name="EndPoint" type="Node3D" parent="ConveyorPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.350455, 0.712211, 0.277666)
